--- a/src/views/casts/create.hbs
+++ b/src/views/casts/create.hbs
@@ -9,15 +9,15 @@
                         <ul class="noBullet">
                             <li>
                                 <label for="name">Name:</label>
-                                <input type="text" class="inputFields" id="name" name="name" value="" />
+                                <input type="text" class="inputFields" id="name" name="name"  />
                             </li>
                             <li>
                                 <label for="age">Age:</label>
-                                <input type="number" class="inputFields" id="age" name="age" value="" />
+                                <input type="number" class="inputFields" id="age" name="age"  />
                             </li>
                             <li>
                                 <label for="born">Born:</label>
-                                <input type="text" class="inputFields" id="born" name="born" value="" />
+                                <input type="text" class="inputFields" id="born" name="born"  />
                             </li>
                             <li>
                                 <label for="name-in-movie">Name in Movie:</label>
@@ -25,7 +25,7 @@
                             </li>
                             <li>
                                 <label for="image">Cast Image:</label>
-                                <input type="text" class="inputFields" id="image" name="" value="" />
+                                <input type="text" class="inputFields" id="image" name="imageUrl"  />
                             </li>
                             <li id="center-btn">
                                 <button id="create-btn">Add Cast</button>
