--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -21,6 +21,7 @@
 
                             <p class="disc">Description: {{movie.description}}</p>
                                 <p class="card-category">Category: {{movie.category}}</p>
+                                <a href="/movies/{{movie.id}}/attach" class="details">Attach</a>
                         </div>
                     </div>
                     <div class="card_right">
