--- a/src/views/casts/attach.hbs
+++ b/src/views/casts/attach.hbs
@@ -1,23 +1,22 @@
-            <section id="attachCast">
-                <div class="attachCastSection">
-                <h1>Attach New Cast</h1>
-                <div class="attach-form">
-                    <h2>{{movie.title}}</h2>
-                    <img class="movie" src="{{movie.imageUrl}}">
-                    <form action="" method="">
-                        <label for="cast">Cast</label>
-                        <select id="cast" name="cast">
-                        <option value="none" selected>--------</option>
-                        <option value="Cast 1">Cast 1</option>
-                        <option value="Cast 2">Cast 2</option>
-                        <option value="Cast 3">Cast 3</option>
-                        <option value="Cast 4">Cast 4</option>
-                        <option value="Cast 5">Cast 5</option>
-                        </select>
-                        <div id="center-btn">
-                            <button id="create-btn">Add Cast</button>
-                        </div>
-                    </form>
+<section id="attachCast">
+    <div class="attachCastSection">
+        <h1>Attach New Cast</h1>
+        <div class="attach-form">
+            <h2>{{movie.title}}</h2>
+            <img class="movie" src="{{movie.imageUrl}}">
+            <form action="" method="">
+                <label for="cast">Cast</label>
+                <select id="cast" name="cast">
+                    <option value="none" selected>--------</option>
+                    <option value="Cast 1">Cast 1</option>
+                    {{#each casts}}
+                    <option value="{{id}}">{{name}}</option>
+                    {{/each}}
+                </select>
+                <div id="center-btn">
+                    <button id="create-btn">Add Cast</button>
                 </div>
-            </div>
-            </section>
+            </form>
+        </div>
+    </div>
+</section>
