Add dynamic navigation

--- a/src/public/css/register-login.css
+++ b/src/public/css/register-login.css
@@ -104,7 +104,7 @@
 #join-btn,
 #login-btn {
     border: 1px solid rgba(10, 180, 180, 1);
-    background: #6d6875;
+    background: #756871;
     font-size: 18px;
     color: white;
     margin-top: 20px;
