Add creator control buttons

--- a/src/views/movies/details.hbs
+++ b/src/views/movies/details.hbs
@@ -21,7 +21,10 @@
 
                 <p class="disc">Description: {{movie.description}}</p>
                 <p class="card-category">Category: {{movie.category}}</p>
+               
                 <a href="/movies/{{movie.id}}/attach" class="details">Attach</a>
+                <a href="/movies/{{movie.id}}/edit" class="details">Edit</a>
+                <a href="/movies/{{movie.id}}/delete" class="details">Delete</a>
             </div>
         </div>
         <div class="card_right">
