Edit movie action

--- a/src/views/movies/edit.hbs
+++ b/src/views/movies/edit.hbs
@@ -5,7 +5,7 @@
                 them."</h2>
         </div>
 
-        <form method="пост" class="editForm">
+        <form method="post" class="editForm">
             <h2>Edit Post</h2>
             <ul class="noBullet">
                 <li>
@@ -37,7 +37,7 @@
                 </li>
                 <li>
                     <label for="image">Movie Poster:</label>
-                    <input type="text" class="inputFields" id="image" name="imageUrl" value="movie.imageUrl" />
+                    <input type="text" class="inputFields" id="image" name="imageUrl" value="{{movie.imageUrl}}" />
                 </li>
                 <li>
                     <label for="image">Rating:</label>
